# gh-artifact-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: compatible_downloader.py  demo-output.md  demo-output.txt  demo-report.json  demo-report.md  live-probe-report.md
src/gh_artifact_inspector/: cli.py  downloader.py
tests/: test_cli.py
tests/fixtures/: artifacts.json
